--- a/et3.tex
+++ b/et3.tex
@@ -1,4 +1,4 @@
-% Created 2023-05-18 Thu 23:15
+% Created 2023-05-19 Fri 15:36
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -596,12 +596,6 @@ public static class ActorHandleHelper {
 
 \section{StartConfigComponent: 找【各种服】的起始初始化地址}
 \label{sec-2}
-\begin{itemize}
-\item 这些组群服务器的起始被全部重构了，重构成配置单例了
-\item 这里是，昨天之前理这部分的时候，理得不够透彻。去重构一个服的初始化与配置，就需要理清、找到这个服所关联的所有的起始配置相关。昨天之前做得还不够好。
-\item 昨天晚上稍微理解得再深一点儿。应该也是，总结自己理一个相对大型框架的方法总结吧。
-\item 今天早上的脑袋还是相对比较清醒，就把这块儿对自己来说相对不够熟悉相对难点儿的，再看一遍，希望有更多的收获！
-\end{itemize}
 \subsection{ConfigSingleton<T>: ProtoObject, ISingleton}
 \label{sec-2-1}
 \begin{minted}[fontsize=\scriptsize,linenos=false]{java}
@@ -1218,8 +1212,89 @@ public class NetServerComponent: Entity, IAwake<IPEndPoint>, IDestroy {
 \item 就是说，这个新的ET7 框架下，服务端的这些，事件机制的，没弄明白没弄透彻。
 \end{itemize}
 
-\section{Protobuf 相关，【Protobuf 里进程间传递的游戏数据相关信息：两个思路】}
+\section{不同的消息或是任务处理器类型}
 \label{sec-7}
+\subsection{interface IMActorHandler 接口类}
+\label{sec-7-1}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public interface IMActorHandler {
+    // ETTask Handle(Entity entity, int fromProcess, object actorMessage); 
+    void Handle(Entity entity, int fromProcess, object actorMessage); // 自已改成这样的：【返回类型
+    Type GetRequestType();
+    Type GetResponseType();
+}
+\end{minted}
+\subsection{AMActorRpcHandler<E, Request, Response>: IMActorHandler void|ETTask 分不清}
+\label{sec-7-2}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+[EnableClass]
+public abstract class AMActorRpcHandler<E, Request, Response>: IMActorHandler where E : Entity where Request : class, IActorRequest where Response : class, IActorResponse {
+    // protected abstract ETTask Run(E unit, Request request, Response response);
+    protected abstract void Run(E unit, Request request, Response response);
+    public async ETTask Handle(Entity entity, int fromProcess, object actorMessage) {
+        try {
+            if (actorMessage is not Request request) {
+                Log.Error($"消息类型转换错误: {actorMessage.GetType().FullName} to {typeof (Request).Name}");
+                return;
+            }
+            if (entity is not E ee) {
+                Log.Error($"Actor类型转换错误: {entity.GetType().Name} to {typeof (E).Name} --{typeof (Request).Name}");
+                return;
+            }
+            int rpcId = request.RpcId;
+            Response response = Activator.CreateInstance<Response>();
+            try {
+                // await this.Run(ee, request, response);
+                this.Run(ee, request, response);
+            }
+            catch (Exception exception) {
+                Log.Error(exception);
+                response.Error = ErrorCore.ERR_RpcFail;
+                response.Message = exception.ToString();
+            }
+            response.RpcId = rpcId;
+            ActorHandleHelper.Reply(fromProcess, response);
+        }
+        catch (Exception e) {
+            throw new Exception($"解释消息失败: {actorMessage.GetType().FullName}", e);
+        }
+    }
+    public Type GetRequestType() {
+        if (typeof (IActorLocationRequest).IsAssignableFrom(typeof (Request)))
+            Log.Error($"message is IActorLocationMessage but handler is AMActorRpcHandler: {typeof (Request)}");
+        return typeof (Request);
+    }
+    public Type GetResponseType() {
+        return typeof (Response);
+    }
+}
+\end{minted}
+\subsection{}
+\label{sec-7-3}
+\section{Unit: 不明白它是什么，不太懂}
+\label{sec-8}
+\subsection{UnitGateComponent:}
+\label{sec-8-1}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+[ComponentOf(typeof(Unit))]
+public class UnitGateComponent : Entity, IAwake<long>, ITransfer {
+    public long GateSessionActorId { get; set; }
+}
+\end{minted}
+\subsection{UnitGateComponentSystem}
+\label{sec-8-2}
+\begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
+public static class UnitGateComponentSystem {
+    public class UnitGateComponentAwakeSystem : AwakeSystem<UnitGateComponent, long> {
+        protected override void Awake(UnitGateComponent self, long a) {
+            self.GateSessionActorId = a;
+        }
+    }
+}
+\end{minted}
+
+\section{Protobuf 相关，【Protobuf 里进程间传递的游戏数据相关信息：两个思路】}
+\label{sec-9}
 \begin{itemize}
 \item 【一、】查找 enum 可能可以用系统平台下的 protoc 来代为生成，效果差不多。只起现 Proto2CS.cs 编译的补充作用。
 \item 【二、】Card 类下的两个 enum 变量，在ILRuntime 热更新库下，还是需要帮它连一下的。用的是 HybridCLR
@@ -1247,7 +1322,7 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \end{itemize}
 
 \section{写在最后：反而是自己每天查看一再更新的}
-\label{sec-8}
+\label{sec-10}
 \begin{itemize}
 \item 因为感觉还是不曾系统性地读ET7 的源码，或者说有效阅读，因为没有带着实际问题的看源码，感觉都不叫看读源码呀。这里会记自己的感觉需要赶快查看的地方。
 \item 【ET 框架的整体架构】：感觉把握不够。常常命名空间分不清。要把这个大的框架，比较高层面的架构再好好看下。然后就是对自顶向下的不同层级场景，所需要的主要的不同组件，分不清，仍需要再熟悉一下源码
@@ -1256,15 +1331,15 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \item 【ClientComponent】：新框架里重构丢了，去找怎么替代？那么现在去追一下，客户端的起始与场景加载或是切换大致过程。它变成了什么客户端场景管理？
 \item 【UIType】部分类：这个类出现在了三四个不同的程序域，现在重构了，好像添加得不对。要再修改
 \end{itemize}
-
 \section{现在的修改内容：}
-\label{sec-9}
+\label{sec-11}
 \begin{itemize}
-\item \textbf{【Windows 下 proto2cs 消息转化】} ：上面拿匹配服地址，一个路由器相关消息加了参数，要重新生成一下。这个 mac 系统下不难，改天有时间也可以把 mac 下的运行环境配置好，这个功能模块就不用一定要切换电脑了。【手动做了一下】
+\item \textbf{【ET7 框架】} 没有处理的逻辑是： \textbf{【ET7 框架里数据库的接入】}
+\item \textbf{【Windows 下 proto2cs 消息转化】} ： ProtoBuf 这个库里还存在几个问题， enum-repeated 等关键字，因为程序域的问题等，没能连能
 \item \textbf{【UILobbyComponent 可以测试】} ：这个大厅组件，Unity 里预设简单，可以试运行一下，看是否完全消除这个UI 组件的报错，这个屏的控件能否显示出来？还是错出得早，这个屏就出不来已经报错了？
 \begin{itemize}
 \item 【客户端】的逻辑是处理好了，编译全过后可以测试
-\item 【服务端】：处理用户请求匹配房间的逻辑，仍在处理： \textbf{C2G\_StartMatch\_ReqHandler}. 必须记笔记。不记会忘。
+\item 【服务端】：处理用户请求匹配房间的逻辑，仍在处理： \textbf{C2G\_StartMatch\_ReqHandler}.
 \end{itemize}
 \item \textbf{【TractorRoomComponent】} ：因为是多组件嵌套，可以合并多组件为同一个组件；另早上看得一知半解的一个【ChildOf】标签，可以帮助组件套用吗？再找找理解消化一下
 \item 【房间组件】：几个现存的 working-on 的问题：
@@ -1276,10 +1351,12 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \end{itemize}
 -【参考来源 \textbf{C2R\_LoginHandler} 】：Realm 处理客户端的登录请求的服务端逻辑。这里看见，它随机分配一个网关服。也就是，我（原本本质上也是随机分配）一个匹配服给用。可以依照这里的例子来改写。
 \end{itemize}
+\item \textbf{【服务端的编译错误】} 基本上扫了一遍。【客户端】因为这些前期的工作，以及拖拉机项目重构设计还没有想透彻，暂停一下。
+\item 【接下来的内容】： \textbf{【重构拖拉机项目】} 。把ET7 框架里【参考项目】的设计看懂，并借助这个例子，把拖拉机项目设计好。
+\item 有时间，会试着尽早解决上面 ProtoBuf 里的几个小问题。但现在需要重构的设计思路，客户端的界面等才能够往下进行。
 \end{itemize}
-
 \section{{\bfseries\sffamily TODO} 其它的：部分完成，或是待完成的大的功能版块，列举}
-\label{sec-10}
+\label{sec-12}
 \begin{itemize}
 \item emacs 那天我弄了好久，把C-; ISpell 原定绑定的功能解除，重新绑定为自己喜欢的 expand-region. 今天第二次再弄，看一下几分钟能够解决完问题？我的这个破烂记性呀。。。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】mingw64 lisp/textmode/flyspell.el 键的重新绑定。这下记住了。还好，花得不是太久。有以前的笔记 
 \begin{itemize}
@@ -1293,7 +1370,7 @@ CommandRun($"protoc.exe", $"--csharp_out=\"./{outputPath}\" --proto_path=\"{prot
 \end{itemize}
 
 \section{拖拉机游戏：【重构OOP/OOD 设计思路】}
-\label{sec-11}
+\label{sec-13}
 \begin{itemize}
 \item 自己是学过，有这方面的意识，但并不是说，自己就懂得，就知道该如何狠好地设计这些类。现在更多的是要受ET 框架，以及参考游戏手牌设计的启发，来帮助自己一再梳理思路，该如何设计它。
 \item ET7 重构里，各组件都该是自己设计重构原项目的类的设计的必要起点。可以根据这些来系统设计重构。【活宝妹就是一定要嫁给亲爱的表哥！！！】
